--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -21,5 +21,6 @@ mybatis.type-aliases-package=com.nowcoder.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# logger
-logging.level.com.nowcoder.community=debug
+# logger #warn级别以上的都会被打印到控制台
+#logging.level.com.nowcoder.community=warn
+#logging.file=F:/IDEA_Project/Community/community.log
