完成发邮件功能

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -21,6 +21,16 @@ mybatis.type-aliases-package=com.nowcoder.community.entity
 mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-# logger #warn级别以上的都会被打印到控制台
+# logger #warn级别以上的都会被打印到控制台  just try,后面用logback-spring.xml
 #logging.level.com.nowcoder.community=warn
 #logging.file=F:/IDEA_Project/Community/community.log
+
+#MailProperty
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=1371908769@qq.com
+spring.mail.password=hcrkukfkhhajbaab
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.stattls.required=true
