--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -25,7 +25,7 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.level.com.nowcoder.community=warn
 #logging.file=F:/IDEA_Project/Community/community.log
 
-#MailProperty
+#MailProperty1
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
 spring.mail.username=1371908769@qq.com
