--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -25,7 +25,7 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.level.com.nowcoder.community=warn
 #logging.file=F:/IDEA_Project/Community/community.log
 
-#MailProperty1
+#MailProperty
 spring.mail.host=smtp.qq.com
 spring.mail.port=465
 spring.mail.username=1371908769@qq.com
@@ -34,3 +34,6 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.stattls.required=true
+
+#Community
+community.path.domain=http://localhost:8080
