将邮箱改为安全邮箱

--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -26,10 +26,10 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.file=F:/IDEA_Project/Community/community.log
 
 #MailProperty
-spring.mail.host=smtp.qq.com
+spring.mail.host=smtp.sina.com
 spring.mail.port=465
-spring.mail.username=1371908769@qq.com
-spring.mail.password=hcrkukfkhhajbaab
+spring.mail.username=nowcoder@sina.com
+spring.mail.password=b8e731633f0bbfbd
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
