--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -37,3 +37,4 @@ spring.mail.properties.mail.smtp.stattls.required=true
 
 #Community
 community.path.domain=http://localhost:8080
+community.path.upload=d:/work/data/upload
